--- a/.config/i3/config
+++ b/.config/i3/config
@@ -50,7 +50,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+grave exec i3-sensible-terminal
+bindsym $mod+grave exec --no-startup-id i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+c kill
@@ -88,10 +88,10 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+Shift+minus split h
+bindsym $mod+period split h
 
 # split in vertical orientation
-bindsym $mod+minus split v
+bindsym $mod+comma split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -157,6 +157,11 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
+bindsym $mod+plus resize grow width 10 px or 10 ppt
+bindsym $mod+minus resize shrink width 10 px or 10 ppt
+bindsym $mod+Shift+plus resize grow height 10 px or 10 ppt
+bindsym $mod+Shift+minus resize shrink height 10 px or 10 ppt
+
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -169,10 +174,10 @@ mode "resize" {
         # bindsym h resize shrink width 10 px or 10 ppt
         # bindsym j resize grow height 10 px or 10 ppt
         # bindsym k resize shrink height 10 px or 10 ppt
-        bindsym plus resize grow width 10 px or 10 ppt
-        bindsym Shift+plus resize grow height 10 px or 10 ppt
-        bindsym Shift+minus resize shrink height 10 px or 10 ppt
-        bindsym minus resize shrink width 10 px or 10 ppt
+        # bindsym plus resize grow width 10 px or 10 ppt
+        # bindsym Shift+plus resize grow height 10 px or 10 ppt
+        # bindsym Shift+minus resize shrink height 10 px or 10 ppt
+        # bindsym minus resize shrink width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
