--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -7,7 +7,6 @@
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
 #
- shadow = true
 #shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
@@ -104,7 +103,7 @@ fade-out-step = 0.5;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+# inactive-opacity = 0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -112,7 +111,7 @@ inactive-opacity = 0.8;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
-inactive-opacity-override = false;
+# inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 # active-opacity = 1.0
@@ -246,7 +245,7 @@ detect-rounded-corners = true;
 # not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
 #
 # detect-client-opacity = false
-detect-client-opacity = true;
+#detect-client-opacity = true;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
