--- a/.config/i3/config
+++ b/.config/i3/config
@@ -10,6 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+set $term alacritty
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -28,8 +29,9 @@ font pango:monospace 8
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id picom
+exec_always --no-startup-id $HOME/.config/i3/mouse_warp.sh
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -47,14 +49,16 @@ floating_modifier $mod
 
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
-tiling_drag modifier titlebar
+# tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+grave exec --no-startup-id i3-sensible-terminal
+bindsym $mod+grave exec --no-startup-id $term
 
 # kill focused window
 bindsym $mod+Shift+c kill
 
+# open pulsemixer
+bindsym $mod+v exec --no-startup-id $term pulsemixer
 # start dmenu (a program launcher)
 bindsym $mod+p exec --no-startup-id dmenu_run -h 30
 # A more modern dmenu replacement is rofi:
@@ -163,33 +167,33 @@ bindsym $mod+Shift+plus resize grow height 10 px or 10 ppt
 bindsym $mod+Shift+minus resize shrink height 10 px or 10 ppt
 
 # resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        # bindsym h resize shrink width 10 px or 10 ppt
-        # bindsym h resize shrink width 10 px or 10 ppt
-        # bindsym j resize grow height 10 px or 10 ppt
-        # bindsym k resize shrink height 10 px or 10 ppt
-        # bindsym plus resize grow width 10 px or 10 ppt
-        # bindsym Shift+plus resize grow height 10 px or 10 ppt
-        # bindsym Shift+minus resize shrink height 10 px or 10 ppt
-        # bindsym minus resize shrink width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
+# mode "resize" {
+#         # These bindings trigger as soon as you enter the resize mode
+# 
+#         # Pressing left will shrink the window’s width.
+#         # Pressing right will grow the window’s width.
+#         # Pressing up will shrink the window’s height.
+#         # Pressing down will grow the window’s height.
+#         # bindsym h resize shrink width 10 px or 10 ppt
+#         # bindsym h resize shrink width 10 px or 10 ppt
+#         # bindsym j resize grow height 10 px or 10 ppt
+#         # bindsym k resize shrink height 10 px or 10 ppt
+#         # bindsym plus resize grow width 10 px or 10 ppt
+#         # bindsym Shift+plus resize grow height 10 px or 10 ppt
+#         # bindsym Shift+minus resize shrink height 10 px or 10 ppt
+#         # bindsym minus resize shrink width 10 px or 10 ppt
+# 
+#         # same bindings, but for the arrow keys
+#         bindsym Left resize shrink width 10 px or 10 ppt
+#         bindsym Down resize grow height 10 px or 10 ppt
+#         bindsym Up resize shrink height 10 px or 10 ppt
+#         bindsym Right resize grow width 10 px or 10 ppt
+# 
+#         # back to normal: Enter or Escape or $mod+r
+#         bindsym Return mode "default"
+#         bindsym Escape mode "default"
+#         bindsym $mod+r mode "default"
+# }
 
 bindsym $mod+r mode "resize"
 
