--- a/.config/i3/config
+++ b/.config/i3/config
@@ -31,7 +31,7 @@ font pango:monospace 8
 # screen before suspend. Use loginctl lock-session to lock your screen.
 # exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id picom
-exec_always --no-startup-id $HOME/.config/i3/mouse_warp.sh
+# exec_always --no-startup-id $HOME/.config/i3/mouse_warp.sh
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -53,6 +53,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+grave exec --no-startup-id $term
+bindsym $mod+Shift+Return exec --no-startup-id $term
 
 # kill focused window
 bindsym $mod+Shift+c kill
