--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,3 +2,4 @@
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+set -g mouse
