--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,43 @@
-# Set new panes to open in current directory
-bind c new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-set -g mouse
+# Set default options
+# set-option -g -u color-scheme  # You can set color scheme in your terminal emulator
+# set-option -g -u default-terminal "screen-256color"
+set-option -g -u mouse on
+#set-option -g -u mode-keys vi
+set-option -g -u display-time 3000
+set -s escape-time 0
+# Set leader key
+unbind C-b
+# set-option -g prefix C-a
+# bind C-a send-prefix
+
+# # Split panes using leader key
+bind -n M-- split-window -v
+bind -n M-\\ split-window -h
+unbind '"'
+unbind %
+# 
+# # Resize panes using leader key
+bind -n M-H resize-pane -L 5
+bind -n M-J resize-pane -D 5
+bind -n M-K resize-pane -U 5
+bind -n M-L resize-pane -R 5
+# 
+# # Switch panes using vim keys
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+# 
+bind -n M-left select-pane -L
+bind -n M-down select-pane -D
+bind -n M-up select-pane -U
+bind -n M-right select-pane -R
+
+bind -n M-c kill-pane
+bind -n M-C kill-session
+bind -n M-w kill-window
+bind -n M-t new-window
+bind -n M-tab next-window
+bind -n M-BTab previous-window
+
+bind -n M-r source-file ~/.config/tmux/tmux.conf \; display 'Reloaded!'
