updated mux's to use more i3-like pane keys

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # Set default options
 # set-option -g -u color-scheme  # You can set color scheme in your terminal emulator
 # set-option -g -u default-terminal "screen-256color"
-set-option -g -u mouse on
+set-option -g mouse on
 #set-option -g -u mode-keys vi
 set-option -g -u display-time 3000
 set -s escape-time 0
@@ -11,8 +11,8 @@ unbind C-b
 # bind C-a send-prefix
 
 # # Split panes using leader key
-bind -n M-- split-window -v
-bind -n M-\\ split-window -h
+bind -n M-_ split-window -v
+bind -n M-| split-window -h
 unbind '"'
 unbind %
 # 
@@ -33,8 +33,8 @@ bind -n M-down select-pane -D
 bind -n M-up select-pane -U
 bind -n M-right select-pane -R
 
-bind -n M-c kill-pane
-bind -n M-C kill-session
+bind -n M-C kill-pane
+# bind -n M-C kill-session
 bind -n M-w kill-window
 bind -n M-t new-window
 bind -n M-tab next-window
