--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,6 +11,7 @@
 
 set $mod Mod4
 set $term alacritty
+set $browser google-chrome-stable
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -67,6 +68,7 @@ bindsym $mod+p exec --no-startup-id dmenu_run -h 30
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 #bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+g exec --no-startup-id $browser
 
 # change focus
 bindsym $mod+h focus left
