--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,7 +13,13 @@ env = GTK_THEME,Adwaita:dark
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
+$corner_radius = 10
+$border_size = 2
+$border_color = 33ccffee
 
+$dunstd_conf = [global]\ncorner_radius = $corner_radius\nframe_width = $border_size
+$config_dunst = killall dunst & echo -e '$dunstd_conf' > ~/.config/dunst/dunstrc.d/10-hyprland.conf
+exec-once = $config_dunst
 # Set programs that you use
 # $terminal = wezterm
 $terminal = alacritty -e tmux
@@ -53,7 +59,7 @@ general {
     resize_on_border = true
     gaps_in = 5
     gaps_out = 8
-    border_size = 2
+    border_size = $border_size
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
@@ -164,6 +170,7 @@ bind = $mainMod, F, fullscreen
 bind = $mainMod SHIFT, F, togglefloating
 bind = $mainMod, A, exec, $calculator
 bind = $mainMod, C, exec, $calendar
+bind = $mainMod, R, exec, $config_dunst
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # Volume and Media Control
@@ -240,3 +247,4 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
