--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,10 +1,13 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
-
+# workspace=eDP-1,1
+# workspace=HDMI-A-1,2-10
+# workspace = 1, monitor:eDP-1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dunst & ~/.config/notifications/battery_alert.sh
 exec-once = swaybg -i .config/backgrounds/backgrounds/drool-d.svg -m fill
 
@@ -15,21 +18,32 @@ env = GTK_THEME,Adwaita:dark
 # source = ~/.config/hypr/myColors.conf
 $corner_radius = 10
 $border_size = 2
-$border_color = 33ccffee
+
+$color1 = rgb(FC7500)
+$color2 = rgb(871D2E)
+$color3 = rgb(E0E0E0)
+$color4 = rgb(D23210)
+$color5 = rgb(140700)
 
 $dunstd_conf = [global]\ncorner_radius = $corner_radius\nframe_width = $border_size
 $config_dunst = killall dunst & echo -e '$dunstd_conf' > ~/.config/dunst/dunstrc.d/10-hyprland.conf
 exec-once = $config_dunst
+
 # Set programs that you use
+$screenshot = grimshot copy area
+$screenshot_save = grimshot save area ~/desktop/screenshots/$(date +%Y-%m-%d-%H-%M-%S).png
 # $terminal = wezterm
 $terminal = alacritty -e tmux
+$clear_terminal = alacritty -e tmux
+$lock = swaylock.sh
 $fileManager = nautilus
 $menu = exec $(tofi-run)
+$pass = bwm -C
 $browser = google-chrome-stable
-$browser_restore = google-chrome-stable --restore-last-session
+$browser_incognito = google-chrome-stable --incognito
 $show_status = ~/.config/notifications/status.sh
 $volume_mixer = alacritty -e pulsemixer 
-$weather = gnome-weather
+$weather = [size 1000 600;center;] gnome-weather
 $calculator = gnome-calculator
 $calendar = gnome-calendar
 
@@ -37,12 +51,13 @@ $calendar = gnome-calendar
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
 
+#
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options=caps:escape
     kb_rules =
 
     follow_mouse = 1
@@ -55,13 +70,14 @@ input {
 }
 
 general {
+    
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     resize_on_border = true
     gaps_in = 5
     gaps_out = 8
     border_size = $border_size
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $color3 #$color2 45deg
+    col.inactive_border = $color5
 
     # layout = dwindle
 
@@ -75,7 +91,7 @@ decoration {
     rounding = 10
 
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 1
         
@@ -147,7 +163,7 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # float all gnome apps
 windowrulev2 = float, class:.*gnome.*
 # float all alacritty windows
-windowrulev2 = float, title:*pulsemixer*
+windowrulev2 = float, class:.*foot.*
 windowrulev2 = size 1000 600, class:.*Nautilus*
 windowrulev2 = center, class:.*Nautilus*
 
@@ -156,32 +172,37 @@ $mainMod = SUPER_L
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, grave, exec, $terminal
+bind = $mainMod SHIFT, grave, exec, [float;center;]$terminal
+bind = , Print, exec, $screenshot
+bind = SHIFT, Print, exec, $screenshot_save
 bind = $mainMod, G, exec, $browser
-bind = $mainMod SHIFT, G, exec, $browser_restore
+bind = $mainMod SHIFT, G, exec, $browser_incognito
 bind = $mainMod SHIFT, C, killactive,
 bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, exec, [float;noanim;] $volume_mixer
 bind = $mainMod, P, exec, $menu
+bind = $mainMod SHIFT, P, exec, $pass
 bind = $mainMod, B, exec, $show_status
 bind = $mainMod, D, pseudo, # dwindle
 bind = $mainMod, W, exec, $weather
-bind = $mainMod, F, fullscreen
+bind = $mainMod, F, togglefloating
 bind = $mainMod SHIFT, F, togglefloating
 bind = $mainMod, A, exec, $calculator
 bind = $mainMod, C, exec, $calendar
 bind = $mainMod, R, exec, $config_dunst
+bind = $mainMod, Q, exec, $lock
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # Volume and Media Control
-bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 
-bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
-bind = , XF86AudioMicMute, exec, pamixer --default-source -m
-bind = , XF86AudioMute, exec, pamixer -t
-bind = , XF86AudioPlay, exec, playerctl play-pause
-bind = , XF86AudioPause, exec, playerctl play-pause
-bind = , XF86AudioNext, exec, playerctl next
-bind = , XF86AudioPrev, exec, playerctl previous
+binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 
+binde = , XF86AudioLowerVolume, exec, pamixer -d 5 
+binde = , XF86AudioMicMute, exec, pamixer --default-source -m
+binde = , XF86AudioMute, exec, pamixer -t
+binde = , XF86AudioPlay, exec, playerctl play-pause
+binde = , XF86AudioPause, exec, playerctl play-pause
+binde = , XF86AudioNext, exec, playerctl next
+binde = , XF86AudioPrev, exec, playerctl previous
 
 # Brightness Control
 bind = , XF86MonBrightnessUp, exec, ~/.local/bin/brightness.sh 3
@@ -205,11 +226,19 @@ bind = $mainMod SHIFT, l, movewindow, r
 bind = $mainMod SHIFT, k, movewindow, u
 bind = $mainMod SHIFT, j, movewindow, d
 
+# Move workspace to monitor 
+bind = $mainMod SHIFT, comma, movecurrentworkspacetomonitor, l
+bind = $mainMod SHIFT, period, movecurrentworkspacetomonitor, r
+
+# Focus monitor with comma and period
+bind = $mainMod, comma, focusmonitor, l
+bind = $mainMod, period, focusmonitor, r
+
 # Resize windows with mainMod + CTRL + arrow keys
-bind = $mainMod CTRL, h, resizeactive, -30 0
-bind = $mainMod CTRL, l, resizeactive, 30 0
-bind = $mainMod CTRL, k, resizeactive, 0 -30
-bind = $mainMod CTRL, j, resizeactive, 0 30
+binde = $mainMod CTRL, h, resizeactive, -30 0
+binde = $mainMod CTRL, l, resizeactive, 30 0
+binde = $mainMod CTRL, k, resizeactive, 0 -30
+binde = $mainMod CTRL, j, resizeactive, 0 30
 
 
 # Switch workspaces with mainMod + [0-9]
