--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,8 +16,8 @@ unbind C-b
 # bind C-a send-prefix
 
 # # Split panes using leader key
-bind -n M-_ split-window -v
-bind -n M-| split-window -h
+bind -n M-_ split-window -c "$PWD"
+bind -n M-| split-window -h -c "$PWD"
 unbind '"'
 unbind %
 # 
