--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,9 +38,11 @@ $clear_terminal = alacritty -e tmux
 $lock = swaylock.sh
 $fileManager = nautilus
 $menu = exec $(tofi-run)
-$pass = bwm -C
-$browser = google-chrome-stable
-$browser_incognito = google-chrome-stable --incognito
+$pass = bwm
+$pass_type = bwm
+$browser = firefox
+$browser_incognito = firefox --private-window
+$bluetooth = blueman-manager
 $show_status = ~/.config/notifications/status.sh
 $volume_mixer = alacritty -e pulsemixer 
 $weather = [size 1000 600;center;] gnome-weather
@@ -130,6 +132,7 @@ dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # you probably want this
+    no_gaps_when_only = true
 }
 
 master {
@@ -164,6 +167,7 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = float, class:.*gnome.*
 # float all alacritty windows
 windowrulev2 = float, class:.*foot.*
+windowrulev2 = float, class:floating
 windowrulev2 = size 1000 600, class:.*Nautilus*
 windowrulev2 = center, class:.*Nautilus*
 
@@ -175,15 +179,17 @@ bind = $mainMod, grave, exec, $terminal
 bind = $mainMod SHIFT, grave, exec, [float;center;]$terminal
 bind = , Print, exec, $screenshot
 bind = SHIFT, Print, exec, $screenshot_save
-bind = $mainMod, G, exec, $browser
-bind = $mainMod SHIFT, G, exec, $browser_incognito
+bind = $mainMod, I, exec, $browser
+bind = $mainMod SHIFT, I, exec, $browser_incognito
 bind = $mainMod SHIFT, C, killactive,
-bind = $mainMod SHIFT, Q, exit,
+bind = $mainMod SHIFT ALT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, exec, [float;noanim;] $volume_mixer
 bind = $mainMod, P, exec, $menu
 bind = $mainMod SHIFT, P, exec, $pass
+bind = $mainMod CTRL, P, exec, $pass_type
 bind = $mainMod, B, exec, $show_status
+bind = $mainMod SHIFT, B, exec, [float;noanim;size 1000 600;center] $bluetooth
 bind = $mainMod, D, pseudo, # dwindle
 bind = $mainMod, W, exec, $weather
 bind = $mainMod, F, togglefloating
@@ -199,10 +205,10 @@ binde = , XF86AudioRaiseVolume, exec, pamixer -i 5
 binde = , XF86AudioLowerVolume, exec, pamixer -d 5 
 binde = , XF86AudioMicMute, exec, pamixer --default-source -m
 binde = , XF86AudioMute, exec, pamixer -t
-binde = , XF86AudioPlay, exec, playerctl play-pause
-binde = , XF86AudioPause, exec, playerctl play-pause
-binde = , XF86AudioNext, exec, playerctl next
-binde = , XF86AudioPrev, exec, playerctl previous
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioPause, exec, playerctl play-pause
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous
 
 # Brightness Control
 bind = , XF86MonBrightnessUp, exec, ~/.local/bin/brightness.sh 3
