--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -45,4 +45,9 @@ bind -n M-t new-window
 bind -n M-tab next-window
 bind -n M-BTab previous-window
 
+# setup vi mode
+bind -n M-Space setw -g mode-keys vi
+
+
+
 bind -n M-r source-file ~/.config/tmux/tmux.conf \; display 'Reloaded!'
