--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,6 +10,10 @@ monitor=,preferred,auto,auto
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dunst & ~/.config/notifications/battery_alert.sh
 exec-once = swaybg -i .config/backgrounds/backgrounds/drool-d.svg -m fill
+exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE" 
+exec-once = nextcloud --background
+exec-once = uxplay
+
 
 # Set dark theme for GTK apps
 env = GTK_THEME,Adwaita:dark
@@ -51,7 +55,10 @@ $calendar = gnome-calendar
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+# env = XCURSOR_THEME,Adwaita
 env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
+# env = HYPRCURSOR_THEME,Adwaita
+# env = HYPRCURSOR_SIZE,24
 
 #
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -135,10 +142,10 @@ dwindle {
     no_gaps_when_only = true
 }
 
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-}
+# master {
+#     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+#     new_is_master = true
+# }
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
