--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dunst & ~/.config/notifications/battery_alert.sh
-exec-once = swaybg -i .config/backgrounds/backgrounds/drool-d.svg -m fill
+exec-once = swaybg -i .config/backgrounds/backgrounds/bg.png -m fill
 exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE" 
 exec-once = nextcloud --background
 exec-once = uxplay
@@ -17,6 +17,11 @@ exec-once = uxplay
 
 # Set dark theme for GTK apps
 env = GTK_THEME,Adwaita:dark
+env = WLR_NO_HARDWARE_CURSORS,1
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = GBM_BACKEND,nvidia-drm
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -39,7 +44,7 @@ $screenshot_save = grimshot save area ~/desktop/screenshots/$(date +%Y-%m-%d-%H-
 # $terminal = wezterm
 $terminal = alacritty -e tmux
 $clear_terminal = alacritty -e tmux
-$lock = swaylock.sh
+$lock = hyprlock
 $fileManager = nautilus
 $menu = exec $(tofi-run)
 $pass = bwm
@@ -55,10 +60,10 @@ $calendar = gnome-calendar
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-# env = XCURSOR_THEME,Adwaita
+env = XCURSOR_THEME,Adwaita
 env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
-# env = HYPRCURSOR_THEME,Adwaita
-# env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,Adwaita
+env = HYPRCURSOR_SIZE,24
 
 #
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -76,6 +81,10 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+}
+
+cursor {
+    allow_dumb_copy = true
 }
 
 general {
@@ -147,10 +156,6 @@ dwindle {
 #     new_is_master = true
 # }
 
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = false
-}
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -159,10 +164,10 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
+# device {
+#     name = epic-mouse-v1
+#     sensitivity = -0.5
+# }
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
