--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dunst & ~/.config/notifications/battery_alert.sh
-exec-once = swaybg -i .config/backgrounds/backgrounds/bg.png -m fill
+exec-once = swaybg -i .config/backgrounds/bg.png -m fill
 exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE" 
 exec-once = nextcloud --background
 exec-once = uxplay
