--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor=,highres,auto,1
 
 # workspace=eDP-1,1
 # workspace=HDMI-A-1,2-10
@@ -9,10 +9,13 @@ monitor=,preferred,auto,auto
 # Execute your favorite apps at launch
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = dunst & ~/.config/notifications/battery_alert.sh
-exec-once = swaybg -i .config/backgrounds/bg.png -m fill
+# exec-once = swaybg -i .config/backgrounds/bg.png -m fill
+exec-once = hyprpaper
 exec-once = tmux setenv -g HYPRLAND_INSTANCE_SIGNATURE "$HYPRLAND_INSTANCE_SIGNATURE" 
-exec-once = nextcloud --background
 exec-once = uxplay
+exec-once = flatpak run dev.deedle.Trayscale --hide-window
+exec-once = nm-applet
+exec-once = waybar
 
 
 # Set dark theme for GTK apps
@@ -22,6 +25,10 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = GBM_BACKEND,nvidia-drm
+env = XDG_SESSION_TYPE,wayland
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_DESKTOP,Hyprland
+
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -41,8 +48,8 @@ exec-once = $config_dunst
 # Set programs that you use
 $screenshot = grimshot copy area
 $screenshot_save = grimshot save area ~/desktop/screenshots/$(date +%Y-%m-%d-%H-%M-%S).png
-# $terminal = wezterm
-$terminal = alacritty -e tmux
+$terminal = wezterm start --always-new-process
+# $terminal = alacritty -e tmux
 $clear_terminal = alacritty -e tmux
 $lock = hyprlock
 $fileManager = nautilus
@@ -53,7 +60,8 @@ $browser = firefox
 $browser_incognito = firefox --private-window
 $bluetooth = blueman-manager
 $show_status = ~/.config/notifications/status.sh
-$volume_mixer = alacritty -e pulsemixer 
+$show_bar = ~/.config/hypr/scripts/toggle_waybar.sh
+$volume_mixer = foot -e pulsemixer 
 $weather = [size 1000 600;center;] gnome-weather
 $calculator = gnome-calculator
 $calendar = gnome-calendar
@@ -77,15 +85,12 @@ input {
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
-cursor {
-    allow_dumb_copy = true
-}
 
 general {
     
@@ -116,10 +121,6 @@ decoration {
         vibrancy = 0.1696
     }
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -128,9 +129,9 @@ animations {
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 0, 5, myBezier
-    animation = windowsOut, 0, 5, default, popin 80%
-    animation = border, 1, 10, default
+    animation = windows, 1, 3, myBezier
+    animation = windowsOut, 1, 3, default, popin 80%
+    animation = border, 1, 2, default
     animation = borderangle, 1, 8, default
     animation = fade, 0, 7, myBezier
     animation = workspaces, 1, 2, default
@@ -148,7 +149,6 @@ dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # you probably want this
-    no_gaps_when_only = true
 }
 
 # master {
@@ -177,9 +177,10 @@ misc {
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # float all gnome apps
 windowrulev2 = float, class:.*gnome.*
-# float all alacritty windows
+# float all foot windows
 windowrulev2 = float, class:.*foot.*
 windowrulev2 = float, class:floating
+# float file manager
 windowrulev2 = size 1000 600, class:.*Nautilus*
 windowrulev2 = center, class:.*Nautilus*
 
@@ -187,7 +188,7 @@ windowrulev2 = center, class:.*Nautilus*
 $mainMod = SUPER_L
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, grave, exec, $terminal
+bind = $mainMod, grave, exec, [] $terminal
 bind = $mainMod SHIFT, grave, exec, [float;center;]$terminal
 bind = , Print, exec, $screenshot
 bind = SHIFT, Print, exec, $screenshot_save
@@ -200,7 +201,8 @@ bind = $mainMod, V, exec, [float;noanim;] $volume_mixer
 bind = $mainMod, P, exec, $menu
 bind = $mainMod SHIFT, P, exec, $pass
 bind = $mainMod CTRL, P, exec, $pass_type
-bind = $mainMod, B, exec, $show_status
+# bind = $mainMod, B, exec, $show_status
+bind = $mainMod, B, exec, $show_bar
 bind = $mainMod SHIFT, B, exec, [float;noanim;size 1000 600;center] $bluetooth
 bind = $mainMod, D, pseudo, # dwindle
 bind = $mainMod, W, exec, $weather
@@ -215,7 +217,7 @@ bind = $mainMod, Q, exec, $lock
 # Volume and Media Control
 binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 
 binde = , XF86AudioLowerVolume, exec, pamixer -d 5 
-binde = , XF86AudioMicMute, exec, pamixer --default-source -m
+binde = , XF86AudioMicMute, exec, pamixer --default-source -t
 binde = , XF86AudioMute, exec, pamixer -t
 bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioPause, exec, playerctl play-pause
