--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,highres,auto,1
+monitor= HDMI-A-2, 3440x1440@49.99,auto,1
+monitor= DP-2, 3440x1440@49.99,auto,1
 
 # workspace=eDP-1,1
 # workspace=HDMI-A-1,2-10
@@ -285,13 +287,9 @@ bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
 bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
-# Example special workspace (scratchpad)
+# special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
