moved to pavucontrol

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,6 +2,7 @@
 monitor=,highres,auto,1
 monitor= HDMI-A-2, 3440x1440@49.99,auto,1
 monitor= DP-2, 3440x1440@49.99,auto,1
+monitor= DP-1, 3440x1440@49.99,auto,1
 
 # workspace=eDP-1,1
 # workspace=HDMI-A-1,2-10
@@ -63,7 +64,7 @@ $browser_incognito = firefox --private-window
 $bluetooth = blueman-manager
 $show_status = ~/.config/notifications/status.sh
 $show_bar = ~/.config/hypr/scripts/toggle_waybar.sh
-$volume_mixer = foot -e pulsemixer 
+$volume_mixer = [float;size 800 600;center;] pavucontrol
 $weather = [size 1000 600;center;] gnome-weather
 $calculator = gnome-calculator
 $calendar = gnome-calendar
@@ -199,7 +200,7 @@ bind = $mainMod SHIFT, I, exec, $browser_incognito
 bind = $mainMod SHIFT, C, killactive,
 bind = $mainMod SHIFT ALT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, exec, [float;noanim;] $volume_mixer
+bind = $mainMod, V, exec, $volume_mixer
 bind = $mainMod, P, exec, $menu
 bind = $mainMod SHIFT, P, exec, $pass
 bind = $mainMod CTRL, P, exec, $pass_type
